--- a/Week3/NodeJS/package.json
+++ b/Week3/NodeJS/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
     "pug": "^3.0.3"
   }
