--- a/Week4/Assignment3/app/package.json
+++ b/Week4/Assignment3/app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "homepage": "https://yinxoxo.github.io/remote-assignments.github.io/Week4/Assignment3/app",
+    "homepage": "https://github.com/yinxoxo/react/app",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
